[metadata]
name = last.fm-memories
version = attr: lastfm_memories.__version__
description = Lists music you had listened before from Last.fm (or Libre.fm)
long_description = file: README.rst
license = GPLv3+
author = Hong Minhee
author_email = hong.minhee@gmail.com
url = https://github.com/dahlia/last.fm-memories
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython
    Topic :: Multimedia :: Sound/Audio
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.7
install_requires =
    appdirs ~= 1.4.3
    click ~= 7.0
    MonthDelta ~= 0.9.1
    pylast ~= 2.4.0

[options.entry_points]
console_scripts =
    last.fm-memories = lastfm_memories.cli:main

[flake8]
import-order-style = spoqa
application-import-names = lastfm_memories
